2009-04-17  Miguel de Icaza  <miguel@novell.com>

	* eval.cs: Introduce an entry point that allows for initialization
	to return a list of the files passed on the command line.

2009-04-14  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #494243
	* report.cs (SymbolRelatedToPreviousError): Fixed NRE.

2009-04-13  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #493887
	* statement.cs: Don't skip string multi-section with default or
	null label when populating string hashtable.

2009-04-06  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #492329
	* expression.cs (New): Load variable when assigning type parameter
	to ref variable.

2009-04-06  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #488960
	* decl.cs: Compare MVAR types using non-null values.

2009-03-27  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, expression.cs: Removed unused nullable checks.

2009-03-27  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Removed some gmcs conditionals.

2009-03-26  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, support.cs: Moved generics stuff out of support.cs

2009-03-24  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, expression.cs: Use queried type for MethodGroupExpr
	DeclaringType.

2009-03-23  Marek Safar  <marek.safar@gmail.com>

	* attribute.cs: Consider all members for error reporting when
	checking named arguments.

2009-03-23  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #487625
	* namespace.cs: Use a warning for all predefined type conflicts.

2009-03-23  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #485706
	* statement.cs: Explicitly type catch type argument to pass verifier
	check.

2009-03-22  Miguel de Icaza  <miguel@novell.com>

	Initial support to provide code completion facilities to consumers
	of the evaluator API.
	
	* cs-tokenizer.cs (CompleteOnEOF): this new property is used to
	support the completion engine.   When we reach the end of the